--- a/app/src/main/res/layout/activity_one_video_edit.xml
+++ b/app/src/main/res/layout/activity_one_video_edit.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto">
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<data>
 
@@ -52,7 +51,7 @@
 					android:textSize="18sp"
 					android:typeface="sans"
 					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintStart_toEndOf="@+id/bmb"
+					app:layout_constraintStart_toEndOf="@id/back"
 					app:layout_constraintTop_toTopOf="parent" />
 
 				<com.nightonke.boommenu.BoomMenuButton
@@ -64,26 +63,12 @@
 					app:layout_constraintTop_toTopOf="parent"
 					app:bmb_backgroundEffect="false"
 					app:bmb_boomEnum="boomLine"
-					app:bmb_buttonEnum="textInsideCircle"
-					app:bmb_buttonPlaceEnum="buttonPlace_sc_3_1"
-					app:bmb_piecePlaceEnum="piecePlace_dot_3_1"
+					app:bmb_buttonEnum="ham"
+					app:bmb_piecePlaceEnum="piecePlace_ham_3"
+					app:bmb_buttonPlaceEnum="buttonPlace_ham_3"
 					app:bmb_showDuration="200"
 					app:bmb_hideDuration="200" />
 			</androidx.constraintlayout.widget.ConstraintLayout>
-
-<<<<<<< HEAD
-			<TextView
-				android:id="@+id/toolbar_title"
-				android:layout_width="wrap_content"
-				android:layout_height="match_parent"
-				android:gravity="center"
-				android:text="@string/video_edit"
-				android:textColor="@color/white"
-				android:textSize="18sp"
-				android:typeface="sans" />
-
-=======
->>>>>>> video edit
 		</androidx.appcompat.widget.Toolbar>
 
 		<LinearLayout
@@ -124,8 +109,8 @@
 		<com.beardedhen.androidbootstrap.BootstrapButton
 			android:layout_width="0dp"
 			android:layout_height="40dp"
-			android:layout_marginStart="16dp"
-			android:layout_marginEnd="72dp"
+			android:layout_marginStart="24dp"
+			android:layout_marginEnd="24dp"
 			android:layout_marginBottom="16dp"
 			android:gravity="center"
 			android:text="剪切"
@@ -151,33 +136,12 @@
 			app:layout_constraintStart_toStartOf="parent" />
 
 		<cn.jzvd.JzvdStd
+			android:id="@+id/videoPlayer"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 			android:layout_marginBottom="32dp"
 			app:layout_constraintBottom_toTopOf="@+id/rangeSeekBar"
 			app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-<<<<<<< HEAD
-
-        <com.github.clans.fab.FloatingActionMenu
-            android:id="@+id/menu"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="6dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="0dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            fab:menu_fab_size="mini"
-            fab:menu_labels_ellipsize="end"
-            fab:menu_labels_singleLine="true"
-            fab:menu_openDirection="up"
-            fab:menu_colorNormal="@color/accent"/>
-
-=======
->>>>>>> video edit
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
