--- a/app/src/main/res/layout/edit_type_background.xml
+++ b/app/src/main/res/layout/edit_type_background.xml
@@ -16,6 +16,29 @@
 			android:layout_marginTop="24dp"/>
 
 		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="16dp"
+			android:layout_marginStart="8dp"
+			android:layout_marginEnd="8dp">
+			<TextView
+				android:id="@+id/startTime"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="00:00"/>
+
+			<View
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"/>
+
+			<TextView
+				android:id="@+id/endTime"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="00:00"/>
+		</LinearLayout>
+
+		<LinearLayout
 			android:id="@+id/linearLayout2"
 			android:layout_width="match_parent"
 			android:layout_height="40dp"
